--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@nestjs/event-emitter": "^3.0.0",
+    "@nestjs/testing": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
+    "eventemitter2": "^6.4.9",
     "pnpm": "^9.15.4",
     "postcss": "^8.5.1",
     "sqlite3": "^5.1.7",
