--- a/apps/realtime-elo-ranker-server/package.json
+++ b/apps/realtime-elo-ranker-server/package.json
@@ -63,6 +63,13 @@
       "json",
       "ts"
     ],
+    "modulePaths": [
+      "node_modules","src"
+    ],
+    "moduleNameMapper": {
+      "@/(.*)$": "<rootDir>/$1",
+      "^src/(.*)$": "<rootDir>/$1"
+    },
     "rootDir": "src",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
